Test: warm guards, info logs on TieredDirectory and TieredSubdirectoryAwareDirectory
Signed-off-by: nishchay21 <nishcha@amazon.com>